[project]
name = "webrtc-tutorial"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Saeki-M", email = "saeki@pcl.cs.waseda.ac.jp" }
]
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn>=0.30.6",
    "python-socketio>=5.11.3",
    "aiohttp>=3.10.5",
    "opencv-python>=4.10.0.84",
    "aiortc>=1.9.0",
    "opencv-python-headless>=4.10.0.84",
    "numpy>=2.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
serve = 'uvicorn webrtc_tutorial.main:app --reload'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/webrtc_tutorial"]
